crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__prisma__tests__render_schema_emits_models_only.snap
---
source: crates/vespertide-exporter/src/prisma/mod.rs
expression: schema
---
model Users {
  id Int @id
  display_name String?

  @@map("users")
}
