crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__prisma__tests__render_schema_emits_shared_enum_block_once.snap
---
source: crates/vespertide-exporter/src/prisma/mod.rs
expression: schema
---
enum DocStatus {
  DRAFT @map("draft")
  PUBLISHED @map("published")
  ARCHIVED @map("archived")
}

model Documents {
  id Int
  status DocStatus
  review_status DocStatus?

  @@map("documents")
}

model ArchivedDocuments {
  id Int
  status DocStatus
  review_status DocStatus?

  @@map("archived_documents")
}
