crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__prisma__tests__render_schema_qualifies_ambiguous_enums@doc_status_docStatus.snap
---
source: crates/vespertide-exporter/src/prisma/mod.rs
expression: schema
---
enum OrdersDocStatus {
  NEW @map("new")
  PAID @map("paid")
}

enum TicketsDocStatus {
  OPEN @map("open")
  CLOSED @map("closed")
}

model Orders {
  id Int @id
  st OrdersDocStatus

  @@map("orders")
}

model Tickets {
  id Int @id
  st TicketsDocStatus

  @@map("tickets")
}
