crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__prisma__tests__render_schema_qualifies_ambiguous_enums@status_status.snap
---
source: crates/vespertide-exporter/src/prisma/mod.rs
expression: schema
---
enum OrdersStatus {
  NEW @map("new")
  PAID @map("paid")
}

enum TicketsStatus {
  OPEN @map("open")
  CLOSED @map("closed")
}

model Orders {
  id Int @id
  st OrdersStatus

  @@map("orders")
}

model Tickets {
  id Int @id
  st TicketsStatus

  @@map("tickets")
}
